tutorials/claims-routing-istio/manifests/istio/auth/requestauthentication.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START claims_routing_identity_platform_istio_manifests_istio_auth_requestauthentication]
apiVersion: security.istio.io/v1beta1
kind: RequestAuthentication
metadata:
  name: app
spec:
  selector:
    matchLabels:
      istio: ingressgateway
  jwtRules:
  - issuer: https://securetoken.google.com/$GOOGLE_CLOUD_PROJECT
    jwksUri: https://www.googleapis.com/service_accounts/v1/jwk/securetoken@system.gserviceaccount.com
    outputPayloadToHeader: x-jwt-payload
    forwardOriginalToken: false
# [END claims_routing_identity_platform_istio_manifests_istio_auth_requestauthentication]
