tutorials/claims-routing-istio/manifests/istio/auth/authorizationpolicy.yaml
# Copyright 2020 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# [START claims_routing_identity_platform_istio_manifests_istio_auth_authorizationpolicy]
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: app
spec:
  action: ALLOW
  selector:
    matchLabels:
      istio: ingressgateway
  rules:
  - to:
    - operation:
        paths:
        - /api/*
    when:
    - key: request.auth.claims[aud]
      values:
      - $GOOGLE_CLOUD_PROJECT
    - key: request.auth.claims[iss]
      values:
      - https://securetoken.google.com/$GOOGLE_CLOUD_PROJECT
  - to:
    - operation:
        notPaths:
        - /api/*
# [END claims_routing_identity_platform_istio_manifests_istio_auth_authorizationpolicy]
